--- a/Report/document.tex
+++ b/Report/document.tex
@@ -220,18 +220,12 @@
 		
 		There are many game engines already out there covering a wide range of performance and development styles, engines such as Unreal Engine~\cite{UE} and Unity~\cite{Unity} have integrated development environments and require all development to be done through them. Other game engines, such as LÖVE~\cite{LOVE} can be developed in any text editor using any work flow that the developer chooses, this improves prototyping times and allows developers to get comfortable much quicker as they are using tools that they are well used to.
 
-		Performance of
-			Love2D
-			Unreal 
-			Engine 
-			Unity 
-			Cry Engine 
-			Source (Garrysmod)
-			Game Studio
-			id Tech (5/6?)
-			MonoGame
-			Cocos
-			OGRE	
+		LÖVE~\cite{LOVE} provides a limited set of features and leaves the majority of the work on the internals of the engine to the game developer. This allows for very fast prototyping of small example games but when creating a larger game things can get difficult. The engine does include some things at a lower level such as physics, GLSL shaders, image loading, TCP and UDP networking. Because LÖVE doesn't manage entities there is quite a low performance ceiling especially with the addition of lighting and particles, other engines address this at the cost of development time. LÖVE is completely open source and completely free.
+
+		Unity~\cite{Unity} and Unreal Engine~\cite{UE} both manage every aspect of the game while still allowing massive extensibility. Both have unique development flows and both take a very long time to master, because of just have massive they are, development can be very slow when compared to lightweight prototyping engines. The Unity engine is not fully open source but allows source access for certain modules of the engine while the latest version of Unreal Engine is fully open source, both adopt similar payment patterns making the developer pay based on the number of sales rather than a fixed fee.		
+
+		Open source allows for the collaborative development of any project and would therefore be ideal for a game engine, by allowing people to fork and extend a game engine a very wide variety of features can be implemented, enabled and disabled based on the individuals needs.
+
 	\newpage
 
 	\printbibliography{}
