--- a/Report/document.bib
+++ b/Report/document.bib
@@ -80,5 +80,9 @@
 @misc{COCOS2D,
     title = {COCOS2D},
     howpublished = {\url{http://cocos2d-x.org/}},
-}
+},
+@mist{PolymorphismDef,
+    title = {Polymorphism},
+    howpublished = {\url{http://lucacardelli.name/Papers/OnUnderstanding.A4.pdf}},
+},
 
